--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>xh-bicycle-ts</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <title>徐汇区共享单车展示</title>
+    <script
+      type="text/javascript"
+      src="https://webapi.amap.com/maps?v=1.4.12&key=112cfcb5a0639295f525065c06918bef&plugin=AMap.DistrictSearch"
+    ></script>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but xh-bicycle-ts doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong
+        >We're sorry but xh-bicycle-ts doesn't work properly without JavaScript
+        enabled. Please enable it to continue.</strong
+      >
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
