更换脚手架的代码格式插件

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title>徐汇区共享单车展示</title>
     <script
       type="text/javascript"
-      src="https://webapi.amap.com/maps?v=1.4.12&key=112cfcb5a0639295f525065c06918bef&plugin=AMap.DistrictSearch"
+      src="https://webapi.amap.com/maps?v=1.4.12&key=112cfcb5a0639295f525065c06918bef&plugin=AMap.DistrictSearch,AMap.Geocoder"
     ></script>
   </head>
   <body>
