--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>徐汇区共享单车展示</title>
+    <title>共享单车展示平台</title>
     <script
       type="text/javascript"
       src="https://webapi.amap.com/maps?v=1.4.12&key=112cfcb5a0639295f525065c06918bef&plugin=AMap.DistrictSearch,AMap.Geocoder"
