--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <title>共享单车展示平台</title>
     <script
       type="text/javascript"
-      src="https://webapi.amap.com/maps?v=1.4.12&key=112cfcb5a0639295f525065c06918bef&plugin=AMap.DistrictSearch,AMap.Geocoder"
+      src="https://webapi.amap.com/maps?v=1.4.12&key=112cfcb5a0639295f525065c06918bef&plugin=AMap.DistrictSearch,AMap.Geocoder,AMap.MarkerClusterer"
     ></script>
   </head>
   <body>
